try fix scrollbar appearing on firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,9 @@
     font-size: 32pt;
     margin: 0;
     overflow-x: scroll;
+    text-align: right;
     unicode-bidi:bidi-override;
+    width: 100%;
   }
 
   &>div:first-child {
